# docs/swagger.yaml
@@ -314,8 +314,6 @@ definitions:
         type: string
       iframe_url:
         type: string
-      script_url:
-        type: string
     type: object
   dto.PartnerBlockGeneralSettingsResponse:
     properties:
@@ -2236,8 +2234,8 @@ paths:
       - partner_blocks
   /partners/sites/{site_id}/blocks/{block_id}/embed:
     get:
-      description: Возвращает embed_token, URL фронтового ad-sdk.js, iframe fallback
-        URL и HTML snippet вида div data-eshkere-ad + script
+      description: Возвращает embed_token, iframe URL и HTML snippet iframe для вставки
+        рекламного блока
       parameters:
       - description: ID сайта
         in: path
