# internal/handler/v1/dto/partner_block.go
@@ -256,7 +256,6 @@ func ToPartnerBlockDetailsResponse(block *models.PartnerBlock, rules []*models.P
 type PartnerBlockEmbedResponse struct {
 	BlockID     int    `json:"block_id"`
 	EmbedToken  string `json:"embed_token"`
-	ScriptURL   string `json:"script_url"`
 	IframeURL   string `json:"iframe_url"`
 	HTMLSnippet string `json:"html_snippet"`
 }
